--- a/ESPOIR.css
+++ b/ESPOIR.css
@@ -8,6 +8,9 @@
 .navbar {
   box-shadow: 0 5px;
 }
+.navbar:hover{
+  opacity: 0,7;
+}
 .nav-item:hover {
   background-color: orange;
 }
@@ -32,6 +35,17 @@ h5 {
 .card-body2 {
   background-color: blue;
 }
+.card-body1{
+  opacity: inherit;
+}
+.card-body2:hover{
+opacity: inherit;
+}
+.card:hover{
+  transform: scale(1.05);
+box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
 .container {
   padding-top: 2%;
   padding-bottom: 1%;
@@ -45,4 +59,11 @@ h5 {
 }
 .liste-horaire {
   list-style: none;
+}
+#forum{
+  margin-right:0px;
+  margin-left: 300px;
+}
+#forum:hover{
+  opacity: 0,7;
 }
