--- a/ESPOIR.css
+++ b/ESPOIR.css
@@ -5,24 +5,39 @@
 .header {
   height: 100px;
 }
-.navbar {
-  box-shadow: 0 5px;
+footer {
 }
-.navbar:hover{
-  opacity: 0,7;
+.navbar {
+  background-color: transparent;
+  box-shadow: 0 2px;
+
+  padding-bottom: 10%;
+}
+.navbar:hover {
+  opacity: 0, 7;
+}
+.nav-item {
+  width: fixed;
 }
 .nav-item:hover {
   background-color: orange;
 }
+
 .logo {
   width: 50%;
   padding: 2px 10px;
 }
 .logo1 {
-  width: 9%;
+  width: 20%;
+}
+.logo1:hover {
+  background-color: white;
 }
 .logo2 {
   width: 9%;
+}
+.logo3 {
+  width: 30px;
 }
 h2,
 h3,
@@ -35,15 +50,15 @@ h5 {
 .card-body2 {
   background-color: blue;
 }
-.card-body1{
+.card-body1 {
   opacity: inherit;
 }
-.card-body2:hover{
-opacity: inherit;
+.card-body2:hover {
+  opacity: inherit;
 }
-.card:hover{
+.card:hover {
   transform: scale(1.05);
-box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
 }
 
 .container {
@@ -60,10 +75,17 @@ box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 .liste-horaire {
   list-style: none;
 }
-#forum{
-  margin-right:0px;
-  margin-left: 300px;
+#forum {
+  margin-left: 00px;
 }
-#forum:hover{
-  opacity: 0,7;
+#forum:hover {
+  opacity: 0, 7;
+}
+#contact-form1 {
+  background-color: orange;
+  border-radius: 2%;
+}
+#contact-form2 {
+  background-color: rgb(41, 207, 212);
+  border-radius: 2%;
 }
