--- a/ESPOIR.css
+++ b/ESPOIR.css
@@ -21,6 +21,7 @@ footer {
 }
 .nav-item:hover {
   background-color: orange;
+  border-radius: 15px;
 }
 
 .logo {
@@ -31,7 +32,7 @@ footer {
   width: 20%;
 }
 .logo1:hover {
-  background-color: white;
+  background-color: rgba(108, 119, 117, 0.788);
 }
 .logo2 {
   width: 9%;
@@ -44,11 +45,23 @@ h3,
 h5 {
   color: orange;
 }
+.card-body {
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 1.25rem;
+  border-radius: 15px;
+}
+.card {
+  border-radius: 15px;
+}
 .card-body1 {
   background-color: orange;
 }
 .card-body2 {
   background-color: blue;
+
+  border-radius: 15px;
 }
 .card-body1 {
   opacity: inherit;
@@ -59,8 +72,13 @@ h5 {
 .card:hover {
   transform: scale(1.05);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
+  background-color: lightsteelblue;
 }
 
+table:hover {
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
+}
 .container {
   padding-top: 2%;
   padding-bottom: 1%;
@@ -82,10 +100,17 @@ h5 {
   opacity: 0, 7;
 }
 #contact-form1 {
-  background-color: orange;
+  background-image: url(https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500);
   border-radius: 2%;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
 }
 #contact-form2 {
-  background-color: rgb(41, 207, 212);
+  background-image: url(https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500);
   border-radius: 2%;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
+}
+
+#panierlogo {
+  width: 2rem;
+  height: 2rem;
 }
