--- a/ESPOIR.css
+++ b/ESPOIR.css
@@ -8,10 +8,9 @@
 footer {
 }
 .navbar {
-  background-color: #B3E5FC;
-  box-shadow: 0 2px;
+  background-color: #b3e5fc;
+  box-shadow: 1px 3px 3px rgba(121, 134, 132, 0.788);
   padding-bottom: 2%;
-  
 }
 .navbar:hover {
   opacity: 0, 7;
@@ -29,7 +28,6 @@ footer {
   padding: 2px 10px;
 }
 .logo1 {
-  width: 20%;
 }
 .logo1:hover {
   background-color: rgba(108, 119, 117, 0.788);
@@ -40,7 +38,9 @@ footer {
 .logo3 {
   width: 30px;
 }
-h2,h3,h5 {
+h2,
+h3,
+h5 {
   color: orange;
 }
 .card-body {
@@ -51,8 +51,9 @@ h2,h3,h5 {
   border-radius: 15px;
 }
 .card {
-  border-radius: 15px;
+  border-radius: 2%;
 }
+
 .card-body1 {
   background-color: orange;
 }
@@ -82,12 +83,11 @@ table:hover {
   padding-bottom: 1%;
 }
 
-
 .forum1 {
-  background-color:#2196F3 ;
+  background-color: #2196f3;
 }
 .forum2 {
-  background-color: #f0f3f7
+  background-color: #f0f3f7;
 }
 .liste-horaire {
   list-style: none;
@@ -108,7 +108,7 @@ table:hover {
   background-image: url(https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500);
   border-radius: 2%;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
-    background-size: cover;
+  background-size: cover;
 }
 
 #panierlogo {
@@ -118,16 +118,15 @@ table:hover {
 .mobilité {
   width: 100%;
   height: 100%;
+  box-shadow: 1px 3px 3px rgba(121, 134, 132, 0.788);
 }
-.cuisine{
+.cuisine {
   width: 100%;
   height: 100%;
+  box-shadow: 1px 3px 3px rgba(121, 134, 132, 0.788);
 }
-.confort{
+.confort {
   width: 100%;
   height: 100%;
-}
-.fb-page{
-  width: 100%;
-  
+  box-shadow: 1px 3px 3px rgba(121, 134, 132, 0.788);
 }
