--- a/ESPOIR.css
+++ b/ESPOIR.css
@@ -5,8 +5,7 @@
 .header {
   height: 100px;
 }
-footer {
-}
+/*-----------------------navbar--------------------*/
 .navbar {
   background-color: #b3e5fc;
   box-shadow: 1px 3px 3px rgba(121, 134, 132, 0.788);
@@ -22,7 +21,7 @@ footer {
   background-color: orange;
   border-radius: 15px;
 }
-
+/*---------------------------logo----------------------------*/
 .logo {
   width: 50%;
   padding: 2px 10px;
@@ -38,11 +37,17 @@ footer {
 .logo3 {
   width: 30px;
 }
+#panierlogo {
+  width: 2rem;
+  height: 2rem;
+}
+/*------------------------titre------------------------------*/
 h2,
 h3,
 h5 {
   color: orange;
 }
+/*------------------------------card accueil--------------------------*/
 .card-body {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
@@ -73,7 +78,7 @@ h5 {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
   background-color: lightsteelblue;
 }
-
+/*----------------------------table panier-------------------------*/
 table:hover {
   transform: scale(1.05);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
@@ -82,15 +87,12 @@ table:hover {
   padding-top: 2%;
   padding-bottom: 1%;
 }
-
+/*----------------------------forum----------------------------------*/
 .forum1 {
   background-color: #2196f3;
 }
 .forum2 {
   background-color: #f0f3f7;
-}
-.liste-horaire {
-  list-style: none;
 }
 #forum {
   margin-left: 00px;
@@ -98,6 +100,11 @@ table:hover {
 #forum:hover {
   opacity: 0, 7;
 }
+/*-------------------------------------contact-----------------------*/
+.liste-horaire {
+  list-style: none;
+}
+
 #contact-form1 {
   background-image: url(https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500);
   border-radius: 2%;
@@ -111,10 +118,7 @@ table:hover {
   background-size: cover;
 }
 
-#panierlogo {
-  width: 2rem;
-  height: 2rem;
-}
+/*-----------------------------card produit---------------------------*/
 .mobilité {
   width: 100%;
   height: 100%;
